fix: add overflow:visible to hero image-box to prevent station image cropping

--- a/css/style.css
+++ b/css/style.css
@@ -217,6 +217,7 @@ ul{list-style:none}
   width: 546px;
   height: 465px;
   z-index: 4;
+  overflow: visible;
 }
 .hero__image {
   width: 100%;
